--- a/cadastros/templates/cadastros/localidades_list.html
+++ b/cadastros/templates/cadastros/localidades_list.html
@@ -1,51 +1,37 @@
-<!doctype html>
-<html lang="pt-br">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Localidades</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  </head>
-  <body>
-    <nav class="navbar bg-dark mb-3" data-bs-theme="dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Lista de Localidades</a>
-        </div>
-    </nav>
+{% extends "base.html" %}
 
-    <main class="container">
-      <h1>Lista de Localidades</h1>
+{% block page_title %}
+    Lista de Localidades
+{% endblock page_title %}
 
-      {% if localidades_list %}
-      <table class="table">
-        <thead>
-          <tr>
-            <th scope="col">#</th>
-            <th scope="col">Localidade</th>
-          </tr>
-        </thead>
-        <tbody>
-            {% for localidade in localidades_list %}
-                <tr>
-                  <th scope="row">{{ localidade.pk }}</th>
-                  <td>{{ localidade.localidade }}</td>
-                  <td>
-                      <a href="#" class="btn btn-danger btn-sm">Excluir</a>
-                  </td>
-                </tr>
-            {% endfor %}          
-        </tbody>
-      </table>      
-      {% else %}
-        <p>Não há localidades cadastradas.</p>
-      {% endif %}
-      
-    </main>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </body>
-</html>
+{% block content %}
+  <h1>Lista de Localidades</h1>
 
-<ul>
-    
-</ul>
+  {% if localidades_list %}
+    <table class="table">
+      <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Localidade</th>
+      </tr>
+      </thead>
+      <tbody>
+          {% for localidade in localidades_list %}
+              <tr>
+                <th scope="row">{{ localidade.pk }}</th>
+                <td>{{ localidade.localidade }}</td>
+                <td>
+                    <a href="{% url "localidades_update" pk=localidade.pk %}" class="btn btn-secondary btn-sm">Editar</a>
+                    <a href="{% url "localidades_delete" pk=localidade.pk %}" class="btn btn-danger btn-sm">Excluir</a>
+                </td>
+              </tr>
+          {% endfor %}          
+      </tbody>
+    </table>      
+  {% else %}
+    <p>Não há localidades cadastradas.</p>
+  {% endif %}
+
+  <a href="{% url 'localidades_create' %}" class="btn btn-primary">Nova Localidade</a>
+{% endblock content %}   
