resolvido erro page_title e content

--- a/cadastros/templates/cadastros/localidades_confirm_delete.html
+++ b/cadastros/templates/cadastros/localidades_confirm_delete.html
@@ -12,7 +12,7 @@
     <form method="POST">
         {% csrf_token %}
         
-        <button type="submit" class="btn btn-danger">Excluir</button>
-        <a href="{% url "localidades_list" %}" class="btn btn-primary">Cancelar</a>
+        <button type="submit" class="btn btn-danger">Sim</button>
+        <a href="{% url "localidades_list" %}" class="btn btn-primary">Não</a>
     </form>
 {% endblock content %}
