--- a/cadastros/templates/cadastros/localidades_form.html
+++ b/cadastros/templates/cadastros/localidades_form.html
@@ -1,33 +1,26 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
 
-{% comment %} {% block page_title %}
-   {% if localidade.pk %}
+{% block page_title %}
+    {% if localidades.pk %}
         Editar Localidade
-    {% elif localidades_update.pk %}
-        Teste
     {% else %}
         Nova Localidade
     {% endif %}
-{% endblock page_title %} {% endcomment %}
+{% endblock page_title %}
 
 {% block content %}
-    {% if localidade.pk %}
-        <h1>Teste Criação</h1>
+    {% if localidades.pk %}
+        <h1>Editar Localidade</h1>
     {% else %}
-        <h1>Teste edição</h1>
+        <h1>Nova Localidade</h1>
     {% endif %}
 
     <form method="POST">
         {% csrf_token %}
+
         {{ form|crispy }}
 
         <button type="submit" class="btn btn-primary">Salvar</button>
     </form>
-{% endblock content %}
-
-
-
-
-
-      
+{% endblock content %}    
